@@ -21,7 +21,7 @@
     <div id="content">
       <br />
       <h1 style="text-align:center;">VBM12 - Voxel-based Morphometry Toolbox</h1><br />
-      <p align="center">This is <b>VBM12 r690 (2015-04-22)</b><br />You can update your copy of VBM12 here: <a href="matlab:spm('alert',evalc('cg_vbm_update(1)'),'VBM Update');">Check for update</a>.<br />If you happen to find any bug, please report them at <a href="mailto:christian.gaser@uni-jena.de">christian.gaser@uni-jena.de</a>.</p>
+      <p align="center">This is <b>VBM12 r698 (2015-06-02)</b><br />You can update your copy of VBM12 here: <a href="matlab:spm('alert',evalc('cg_vbm_update(1)'),'VBM Update');">Check for update</a>.<br />If you happen to find any bug, please report them at <a href="mailto:christian.gaser@uni-jena.de">christian.gaser@uni-jena.de</a>.</p>
       <p align="center">Thank you!</p>
     
       <br />  
